<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AndroidYunConnActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/infoText1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10" />

        <TextView
            android:id="@+id/infoText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.54"
            android:text="@string/button_start" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/DataReceivedLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:gravity="center_vertical|center"
            android:text="@string/data_received" />
        
        <TextView
            android:id="@+id/DataReceived"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.42"
            android:gravity="center_vertical|center" />

        <TextView
            android:id="@+id/DataSentLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.24"
            android:gravity="center_vertical|center"
            android:text="@string/data_sent" />
        
        <TextView
            android:id="@+id/DataSent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.41"
            android:gravity="center_vertical|center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/ipaddrlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:gravity="center_vertical|center"
            android:text="@string/ip_addr" />
        
        <EditText
            android:id="@+id/ipaddr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.17"
            android:gravity="center_vertical|center"
            android:maxLines="1"
            android:singleLine="true" >
            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/portnumlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.17"
            android:gravity="center_vertical|center"
            android:text="@string/port_no" />
        
        <TextView
            android:id="@+id/portnum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.17"
            android:gravity="center_vertical|center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.49"
            android:text="@string/button_forward" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.51"
            android:text="@string/button_left" />

        <Button
            android:id="@+id/button_halt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.51"
            android:text="@string/button_halt" />

        <Button
            android:id="@+id/button_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.49"
            android:text="@string/button_right" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_backward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.07"
            android:text="@string/button_backward" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.18"
            android:text="@string/button_6" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.19"
            android:text="@string/button_7" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.19"
            android:text= "@string/button_8" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:text="@string/button_9" />

        <Button
            android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:text="@string/button_10" />

    </LinearLayout>

    <WebView
        android:id="@+id/yunView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>